2015-05-29  Benno Schulenberg <bensberg@justemail.net> (tiny change)

	* info/session.c (display_startup_message): Reword note to 
	translators.

2015-05-26  Karl Berry  <karl@freefriends.org>

	* doc/texinfo.tex (\setnonasciicharscatcodenonglobal):
	rm spurious blank line.  Report from David Kastrup,
	26 May 2015 15:14:06.	

2015-05-21  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/pseudotty.c: Check return value of fclose.  Use an int to 
	hold return value of read.  Consistent syntax for infinite 
	loops.  (Suggestions from Karl Berry.)

2015-05-20  Karl Berry  <karl@freefriends.org>

	* util/texi2dvi (generated_files_get): make punctuation optional
	on the \openout line, to cater to luatex 0.80.0.  Noted
	by Wybo Dekker, report http://tracker.luatex.org/view.php?id=909.

2015-05-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (printed_representation): Declare char * as 
	unsigned, so that check for printable limit works.  Display 
	unknown bytes with an octal representation.

2015-05-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-test.inc, info/t/Init-inter.inc, info/t/*.sh:
	Revert split of GINFO variable from yesterday.

	* info/t/Init-inter.inc: Wedge pipe for input key presses open 
	for reading as well as for writing.
	* info/t/Timeout-test.inc: Try to detect if "read -t" works by 
	running it in a subshell.  If exit status of "read -t" is 1, 
	report that an end-of-file was likely.

	* info/man.c (get_manpage_from_formatter): Ignore exit status of 
	man page formatter.

2015-05-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-test.inc: Split GINFO variable into GINFO and 
	GINFO_OPTIONS, and provide GINFO function to use them together.
	* info/t/Init-inter.inc: Pass GINFO_OPTIONS variable as 
	arguments to GINFO.  (Attempt at fixing error message on
	Solaris 10, "./ginfo --init-file ./t/Infokey-config: not found".  
	Maybe word splitting isn't happening.)
	* info/t/*.sh: Use GINFO alias instead of $GINFO.
